tests/toylang/neg/001529_mutation.toylang
program a = { var program : bool; } .
